Bug 620305 - Crash [@ nsNavHistory::GetStringFromName] when GetBundle() fails. r=mak a=sdwilsh